# projetcpp2526-s2-2a12-smart-carpentry-workshop-management

./: CMakeLists.txt  MainWindow.cpp  README.md  addmaterialdialog.cpp  addmaterialdialog.ui  affichermaterieldialog.cpp  affichermaterieldialog.h  affichermaterieldialog.ui  ajoutprojet.cpp  ajoutprojet.h  ajoutprojet.ui  build_and_run.ps1  chahier1.docx  connection.cpp  deleteprojet.cpp  deleteprojet.h  deleteprojet.ui  insert_employees.sql  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  migrate_woodflow.sql  modifierprojet.cpp  modifierprojet.h  modifierprojet.ui  modifmaterieldialog.cpp  modifmaterieldialog.h  modifmaterieldialog.ui  ressources.qrc  seeprojet.cpp  seeprojet.h  seeprojet.ui  style-dark.qss  style.qss  suppmaterieldialog.cpp  suppmaterieldialog.h  suppmaterieldialog.ui  toggleswitch.h  win.qss  (+1 more)
employer/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp  style.qss
interface/: MainWindow.h  style.qss
luck_dev/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  style.qss
luck_dev/.cache/clangd/index/: main.cpp.17FAF3615F856D7F.idx  mainwindow.cpp.5B3C7981D7EC5532.idx  mainwindow.h.27F62B47F2DC5963.idx
luck_dev_with_auth/: CMakeLists.txt  mainwindow.ui
luck_dev_with_auth/src/assets/icons/: README.txt
luck_dev_with_auth/src/modules/employees/: employeemanagementpage.cpp
src/assets/icons/: ASSETS_GUIDE.md  image_list.txt
src/common/: validators.h
src/core/: session.cpp  session.h
src/database/: connection.cpp  connection.h  employeedatabase.cpp  employeedatabase.h  projetdatabase.cpp  projetdatabase.h  stockdatabase.cpp  stockdatabase.h
src/models/: employee.h  projet.cpp  projet.h  stockmaterial.cpp  stockmaterial.h
src/modules/auth/: loginpage.cpp  loginpage.h  registerpage.cpp  registerpage.h
src/modules/employees/: employeedialog.cpp  employeedialog.h  employeemanagementpage.cpp
src/modules/stock/: stockpage.cpp  stockpage.h
ui/modules/auth/: loginpage.ui  registerpage.ui
wf-db-integ/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  toggleswitch.cpp
wf-db-integ/.cache/clangd/index/: connection.cpp.51517EFE07CDE69F.idx  connection.h.CD7D0A843ED0FA4D.idx  employee.cpp.D22068D69FF99446.idx  employee.h.D259DFD6142EBB59.idx  employeedatabase.cpp.4F070B9B7164A11C.idx  employeedatabase.h.5524351F4351503C.idx  employeedialog.cpp.79BC505B7361013C.idx  employeedialog.h.AF39EA8F0DE3DE18.idx  employeemanagementpage.cpp.C7CFAF7FC565DD21.idx  employeemanagementpage.h.FC335DA658446E6D.idx  loginpage.cpp.4D53F7AA214099CE.idx  loginpage.h.07B9459B414C2A9B.idx  main.cpp.B291CB22610898ED.idx  mainwindow.cpp.41BD2889B85B016D.idx  mainwindow.h.04BA27C3980B4369.idx  registerpage.cpp.21D117EDCD9B24F4.idx  registerpage.h.16D7F378D9326519.idx  session.cpp.D13075606119FB66.idx  session.h.6624CE78DC2793D7.idx  stockpage.cpp.6268D892644D1897.idx  stockpage.h.96C87D4D3F60439F.idx  toggleswitch.cpp.6A849BAEC0413D59.idx  toggleswitch.h.35D6315817AD3F14.idx  validators.cpp.413FF367BA431AF4.idx  validators.h.AD84D96906BD5AE7.idx
wf-db-integ/src/common/: validators.cpp
wf-db-integ/src/models/: employee.cpp
wf-db-integ/src/modules/employees/: employeemanagementpage.h
